changed card-img width height + wrapper

--- a/style/index.css
+++ b/style/index.css
@@ -328,6 +328,8 @@ p {
   height: 100%;
 }
 .our-courses .our-courses__content .our-courses__card-list .card .card__img-container img {
+  width: 100%;
+  height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
   transition: 0.5s;
@@ -898,6 +900,8 @@ p {
 }
 
 .wrapper {
+  height: 100%;
+  width: 100%;
   padding: 2vw 5vw;
 }
 
