--- a/style/index.scss
+++ b/style/index.scss
@@ -448,6 +448,8 @@ p {
           height: 100%;
 
           img {
+            width: 100%;
+            height: 100%;
             object-fit: cover;
             transition: .5s;
           }
@@ -1220,8 +1222,8 @@ p {
 }
 
 .wrapper {
-  // height: 100%;
-  // width: 100vw;
+  height: 100%;
+  width: 100%;
   padding: 2vw 5vw;
 
 }
