--- a/style/index.css
+++ b/style/index.css
@@ -5,6 +5,9 @@
   font-family: "Bicubik";
   src: url("../assets/fonts/Bicubik/Bicubik.OTF");
 }
+:root {
+  font-size: 16px;
+}
 @media screen and (max-width: 962px) {
   :root {
     font-size: 12px;
@@ -16,8 +19,12 @@
   }
 }
 
+html {
+  animation: opacityFromZeroToOne 1s forwards;
+}
+
 li a {
-  font-size: 1.5rem;
+  font-size: 2rem;
 }
 
 * a {
@@ -42,7 +49,7 @@ p {
 }
 
 .h1 {
-  font-size: 3rem;
+  font-size: 4rem;
   font-family: "Bicubik";
 }
 
@@ -121,6 +128,7 @@ p {
   background-image: url("../assets/background/main-first-section-bg.jpg");
   background-size: cover;
   background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 .master-class .header {
   animation: opacityFromZeroToOne 2s forwards;
@@ -291,7 +299,7 @@ p {
 .our-courses .our-courses__content .our-courses__card-list {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 5px;
+  gap: 0.5vw;
   justify-content: flex-start;
   align-items: center;
 }
